buildscript {
  ext {
    spotless_version = '7.1.0'
    spring_boot_starter_version = '3.5.8'
    postgresql_jdbc_driver_version = '42.7.2'
    auth0_java_jwt_version = '4.5.0'
    uuid_creator_version = '6.0.0'
    flyway_version = '11.19.1'
  }
}

plugins {
  id 'com.diffplug.spotless' version "${spotless_version}"
  id 'java'
  id 'org.springframework.boot' version "${spring_boot_starter_version}"
}

group = 'com.fw.irongate'
version = '0.0.1'

java {
  sourceCompatibility = '21'
  targetCompatibility = '21'
}

spotless {
  java {
    googleJavaFormat('1.17.0')
      .formatJavadoc(false)
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation "org.springframework.boot:spring-boot-starter-web:${spring_boot_starter_version}"
  implementation "org.springframework.boot:spring-boot-starter-data-jpa:${spring_boot_starter_version}"
  implementation "org.springframework.boot:spring-boot-starter-validation:${spring_boot_starter_version}"
  implementation "org.springframework.boot:spring-boot-starter-test:${spring_boot_starter_version}"
  implementation "org.springframework.boot:spring-boot-starter-security:${spring_boot_starter_version}"
  implementation "org.postgresql:postgresql:${postgresql_jdbc_driver_version}"
  implementation "com.auth0:java-jwt:${auth0_java_jwt_version}"
  implementation "com.github.f4b6a3:uuid-creator:${uuid_creator_version}"
  implementation "org.flywaydb:flyway-core:${flyway_version}"
  implementation "org.flywaydb:flyway-database-postgresql:${flyway_version}"
}

test {
  useJUnitPlatform()
}
